# regs

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
reg/: .env.example  .gitignore  __init__.py  build_exe.py  config.example.json  gui.py  register.example.json  run.py  runtime.py  settings.example.json  web_app.py  web_main.py  web_manager.py
services/: __init__.py  account_service.py  config.py  log_service.py  proxy_service.py
services/register/: __init__.py  mail_provider.py  openai_register.py
services/storage/: __init__.py  base.py  factory.py  json_storage.py
utils/: __init__.py  log.py
web/: app.js  index.html  styles.css
